; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/extr_udev-rules.c_check_attr_format_and_warn.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/extr_udev-rules.c_check_attr_format_and_warn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i8*)* @check_attr_format_and_warn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_attr_format_and_warn(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i64 @isempty(i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i32*, i32** %5, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @log_token_invalid_attr(i32* %14, i8* %15)
  store i32 %16, i32* %4, align 4
  br label %30

17:                                               ; preds = %3
  %18 = load i8*, i8** %7, align 8
  %19 = call i64 @udev_check_format(i8* %18, i64* %8, i8** %9)
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %17
  %22 = load i32*, i32** %5, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = load i64, i64* %8, align 8
  %26 = add i64 %25, 1
  %27 = load i8*, i8** %9, align 8
  %28 = call i32 @log_token_invalid_attr_format(i32* %22, i8* %23, i8* %24, i64 %26, i8* %27)
  br label %29

29:                                               ; preds = %21, %17
  store i32 0, i32* %4, align 4
  br label %30

30:                                               ; preds = %29, %13
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i64 @isempty(i8*) #1

declare dso_local i32 @log_token_invalid_attr(i32*, i8*) #1

declare dso_local i64 @udev_check_format(i8*, i64*, i8**) #1

declare dso_local i32 @log_token_invalid_attr_format(i32*, i8*, i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
